--- a/src/main/resources/com/example/sacms/signInZero.fxml
+++ b/src/main/resources/com/example/sacms/signInZero.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <ImageView fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true">
          <image>
@@ -43,6 +45,11 @@
                </font>
             </Text>
             <Button layoutX="122.0" layoutY="505.0" mnemonicParsing="false" onAction="#onLogOutButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="238.0" text="Button" />
+            <Button layoutX="149.0" layoutY="363.0" mnemonicParsing="false" onAction="#onTeacherSignInButtonClicked" prefHeight="67.0" prefWidth="179.0" style="-fx-background-color: #E5E7E9; -fx-background-radius: 10;" text="TEACHER">
+               <font>
+                  <Font name="Noto Sans Bold" size="20.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
