--- a/src/main/resources/com/example/sacms/clubCreation.fxml
+++ b/src/main/resources/com/example/sacms/clubCreation.fxml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <Label layoutX="52.0" layoutY="179.0" text="Enter club name">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="Clubname" layoutX="52.0" layoutY="211.0" prefHeight="26.0" prefWidth="261.0" promptText="Name" style="-fx-background-radius: 10;">
+      <TextField fx:id="clubNameInputClubCreationScreen" layoutX="52.0" layoutY="211.0" prefHeight="26.0" prefWidth="261.0" promptText="Name" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="Clubadvisorid" layoutX="397.0" layoutY="211.0" prefHeight="26.0" prefWidth="261.0" promptText="Club advisor ID" style="-fx-background-radius: 10;">
+      <TextField fx:id="clubAdvisorIDInputClubCreationScreen" layoutX="397.0" layoutY="211.0" prefHeight="26.0" prefWidth="261.0" promptText="Club advisor ID" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -27,7 +31,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="52.0" layoutY="286.0" text="Enter club description">
+      <Label layoutX="51.0" layoutY="291.0" text="Enter club description">
          <font>
             <Font size="22.0" />
          </font>
@@ -43,7 +47,7 @@
             <Font name="System Bold" size="44.0" />
          </font>
       </Label>
-      <Button layoutX="493.0" layoutY="584.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="CREATE" textFill="WHITE">
+      <Button layoutX="453.0" layoutY="585.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="CREATE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
@@ -53,8 +57,38 @@
             <Image url="@../images/ClubCreationScreenPic.png" />
          </image>
       </ImageView>
-      <TextArea layoutX="52.0" layoutY="329.0" prefHeight="218.0" prefWidth="607.0" style="-fx-border-radius: 20;" />
+      <TextArea fx:id="clubDescriptionInputClubCreationScreen" layoutX="52.0" layoutY="333.0" prefHeight="214.0" prefWidth="322.0" style="-fx-border-radius: 20;" />
       <Label layoutX="63.0" layoutY="255.0" textFill="RED" />
       <Label layoutX="404.0" layoutY="255.0" textFill="RED" />
+      <TextField fx:id="clubStaffIDInputClubCreationScreen" layoutX="395.0" layoutY="331.0" prefHeight="44.0" prefWidth="266.0" promptText="Staff ID" style="-fx-background-radius: 10;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <Label layoutX="395.0" layoutY="292.0" text="Choose a Teacher Incharge">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <Label layoutX="52.0" layoutY="255.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="52.0" layoutY="554.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="395.0" layoutY="262.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="395.0" layoutY="376.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
