--- a/src/main/resources/com/example/sacms/clubCreation.fxml
+++ b/src/main/resources/com/example/sacms/clubCreation.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <Label layoutX="52.0" layoutY="179.0" text="Enter club name">
          <font>
@@ -60,7 +56,7 @@
       <TextArea fx:id="clubDescriptionInputClubCreationScreen" layoutX="52.0" layoutY="333.0" prefHeight="214.0" prefWidth="322.0" style="-fx-border-radius: 20;" />
       <Label layoutX="63.0" layoutY="255.0" textFill="RED" />
       <Label layoutX="404.0" layoutY="255.0" textFill="RED" />
-      <TextField fx:id="clubStaffIDInputClubCreationScreen" layoutX="395.0" layoutY="331.0" prefHeight="44.0" prefWidth="266.0" promptText="Staff ID" style="-fx-background-radius: 10;">
+      <TextField fx:id="clubStaffIDInputClubCreationScreen" layoutX="395.0" layoutY="331.0" prefHeight="44.0" prefWidth="202.0" promptText="Staff ID" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -70,25 +66,34 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="52.0" layoutY="255.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+      <Label fx:id="errorClubNameDInputClubCreationScreen" layoutX="52.0" layoutY="255.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="52.0" layoutY="554.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+      <Label fx:id="errorClubDescriptionInputClubCreationScreen" layoutX="52.0" layoutY="554.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="395.0" layoutY="262.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+      <Label fx:id="errorClubAdvisorIDInputClubCreationScreen" layoutX="395.0" layoutY="262.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="395.0" layoutY="376.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+      <Label fx:id="errorStaffIDInputClubCreationScreen" layoutX="395.0" layoutY="376.0" prefHeight="20.0" prefWidth="193.0" textFill="#d30000">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
+      <Button layoutX="604.0" layoutY="331.0" mnemonicParsing="false" onAction="#onLoadStaffIDClubScreationScreenClicked" prefHeight="44.0" prefWidth="56.0" style="-fx-background-color: black; -fx-background-radius: 10;" textFill="#dddddd">
+         <graphic>
+            <ImageView fitHeight="34.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/loadIcon.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
