--- a/src/main/resources/com/example/sacms/loginScreen.fxml
+++ b/src/main/resources/com/example/sacms/loginScreen.fxml
@@ -22,12 +22,12 @@
     </ImageView>
       <AnchorPane layoutX="331.0" layoutY="77.0" prefHeight="534.0" prefWidth="413.0" style="-fx-background-color: white; -fx-background-radius: 25;">
          <children>
-            <TextField fx:id="EmailLogin" layoutX="46.0" layoutY="165.0" prefHeight="44.0" prefWidth="322.0" promptText="Email" style="-fx-background-radius: 10;">
+            <TextField fx:id="IDLoginInput" layoutX="46.0" layoutY="165.0" prefHeight="44.0" prefWidth="322.0" promptText="Student/ ClubAdvisor/ Staff ID" style="-fx-background-radius: 10;">
                <font>
                   <Font size="20.0" />
                </font>
             </TextField>
-            <Label layoutX="46.0" layoutY="115.0" prefHeight="65.0" prefWidth="170.0" text="Enter your email">
+            <Label layoutX="46.0" layoutY="115.0" prefHeight="65.0" prefWidth="170.0" text="Enter your ID">
                <font>
                   <Font size="20.0" />
                </font>
