--- a/src/main/resources/com/example/sacms/signInClubAdvisor.fxml
+++ b/src/main/resources/com/example/sacms/signInClubAdvisor.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
         <ImageView fitHeight="56.0" fitWidth="123.0" layoutX="16.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -40,12 +37,12 @@
                 <Font size="20.0" />
             </font>
         </TextField>
-        <Label layoutX="161.0" layoutY="362.0" text="Enter your Teacher Incharge ID">
+        <Label layoutX="161.0" layoutY="362.0" text="Enter your Club ID">
             <font>
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="staffIDSigInClubAdvisorScreen" layoutX="161.0" layoutY="394.0" prefHeight="44.0" prefWidth="300.0" promptText="Teacher Incharge's Staff ID" style="-fx-background-radius: 10;">
+        <TextField fx:id="clubIDSigInClubAdvisorScreen" layoutX="161.0" layoutY="394.0" prefHeight="44.0" prefWidth="300.0" promptText="Club ID" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
@@ -55,7 +52,7 @@
                 <Image url="@../images/SignInScreen2BG.png" />
             </image>
         </ImageView>
-        <Button fx:id="registerButtonSignInTwo" layoutX="197.0" layoutY="541.0" mnemonicParsing="false" onAction="#onRegisterClubAdvisorButtonClicked" prefHeight="54.0" prefWidth="227.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="REGISTER" textFill="WHITE">
+        <Button fx:id="requestClubAdvisorRoleButtonSignInTwo" layoutX="197.0" layoutY="541.0" mnemonicParsing="false" onAction="#onrequestClubAdvisorRoleButtonClicked" prefHeight="54.0" prefWidth="227.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="REQUEST" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
@@ -70,7 +67,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorStaffIDSigInClubAdvisorScreen" layoutX="161.0" layoutY="440.0" prefHeight="20.0" prefWidth="300.0" textFill="#f20000">
+      <Label fx:id="errorClubIDSigInClubAdvisorScreen" layoutX="161.0" layoutY="440.0" prefHeight="20.0" prefWidth="300.0" textFill="#f20000">
          <font>
             <Font size="14.0" />
          </font>
