--- a/src/main/resources/com/example/sacms/clubCreation.fxml
+++ b/src/main/resources/com/example/sacms/clubCreation.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <Label layoutX="52.0" layoutY="179.0" text="Enter club name">
          <font>
@@ -43,7 +47,7 @@
             <Font name="System Bold" size="44.0" />
          </font>
       </Label>
-      <Button layoutX="453.0" layoutY="585.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="CREATE" textFill="WHITE">
+      <Button layoutX="453.0" layoutY="585.0" mnemonicParsing="false" onAction="#onCreateClubClubCreationScreenClicked" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="CREATE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
@@ -66,7 +70,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label fx:id="errorClubNameDInputClubCreationScreen" layoutX="52.0" layoutY="255.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+      <Label fx:id="errorClubNameInputClubCreationScreen" layoutX="52.0" layoutY="255.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
          <font>
             <Font size="14.0" />
          </font>
