--- a/src/main/resources/com/example/sacms/loginScreen.fxml
+++ b/src/main/resources/com/example/sacms/loginScreen.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 0;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
       <ImageView blendMode="SRC_ATOP" fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true">
          <image>
@@ -42,7 +46,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button layoutX="124.0" layoutY="420.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="LOG IN" textFill="WHITE">
+            <Button layoutX="124.0" layoutY="420.0" mnemonicParsing="false" onAction="#onLogInTwoButtonClicked" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="LOG IN" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -58,8 +62,8 @@
                </font>
             </PasswordField>
             <Button layoutX="61.0" layoutY="480.0" mnemonicParsing="false" onAction="#onSignInButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="292.0" />
-            <Label layoutX="55.0" layoutY="209.0" textFill="RED" />
-            <Label layoutX="53.0" layoutY="331.0" textFill="RED" />
+            <Label fx:id="errorIDLoginInput" layoutX="55.0" layoutY="209.0" prefHeight="18.0" prefWidth="303.0" textFill="RED" />
+            <Label fx:id="errorPasswordLoginInput" layoutX="53.0" layoutY="331.0" prefHeight="18.0" prefWidth="303.0" textFill="RED" />
          </children>
       </AnchorPane>
     </children>
