-code to create all tables have been given -added a IO catch for login to check if Id is of length -added an IO catch for login to check if id is S/T/CA. -sessionUser varaible is a global varaible which helps us to check which user is currentyl logged in

--- a/src/main/resources/com/example/sacms/loginScreen.fxml
+++ b/src/main/resources/com/example/sacms/loginScreen.fxml
@@ -46,7 +46,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button layoutX="124.0" layoutY="420.0" mnemonicParsing="false" onAction="#onLogInTwoButtonClicked" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="LOG IN" textFill="WHITE">
+            <Button layoutX="124.0" layoutY="420.0" mnemonicParsing="false" onAction="#onLogInButtonClicked" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="LOG IN" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
