--- a/src/main/resources/com/example/sacms/signInTeacher.fxml
+++ b/src/main/resources/com/example/sacms/signInTeacher.fxml
@@ -121,17 +121,17 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="389.0" layoutY="387.0" text="Enter your Staff ID">
+        <Label layoutX="389.0" layoutY="387.0" text="Enter your Teacher ID">
             <font>
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="staffIDSignInTeacherInput" layoutX="389.0" layoutY="419.0" prefHeight="44.0" prefWidth="214.0" promptText="Staff ID" style="-fx-background-radius: 10;">
+        <TextField fx:id="teacherIDSignInTeacherInput" layoutX="389.0" layoutY="419.0" prefHeight="44.0" prefWidth="214.0" promptText="Teacher ID" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
         </TextField>
-        <Label fx:id="errorStaffIDSignInTeacherInput" layoutX="389.0" layoutY="463.0" prefHeight="20.0" prefWidth="214.0" textFill="RED">
+        <Label fx:id="errorTeacherIDSignInTeacherInput" layoutX="389.0" layoutY="463.0" prefHeight="20.0" prefWidth="214.0" textFill="RED">
             <font>
                 <Font size="14.0" />
             </font>
