--- a/src/main/resources/com/example/sacms/clubsViewStudentsAndTeachers.fxml
+++ b/src/main/resources/com/example/sacms/clubsViewStudentsAndTeachers.fxml
@@ -13,6 +13,7 @@
 
 <AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
+      <Button layoutX="510.0" layoutY="134.0" mnemonicParsing="false" onAction="#onHideClubsViewStudentsAndTeachersOptionClicked" opacity="0.0" prefHeight="76.0" prefWidth="210.0" text="Button" />
         <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/Logo.png" />
@@ -80,38 +81,38 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <AnchorPane fx:id="joinClubsPane" layoutX="757.0" layoutY="227.0" opacity="0.0" prefHeight="167.0" prefWidth="221.0">
+      <AnchorPane fx:id="joinClubsPane" layoutX="757.0" layoutY="315.0" opacity="0.0" prefHeight="167.0" prefWidth="221.0">
          <children>
-            <TextField fx:id="eventNameEventCreationInput" layoutY="32.0" prefHeight="44.0" prefWidth="221.0" promptText="    Enter the Club ID" style="-fx-background-radius: 10;">
+            <TextField fx:id="clubIDInputJoinClubsStudetnsAndTeachers" layoutY="14.0" prefHeight="44.0" prefWidth="221.0" promptText="    Enter the Club ID" style="-fx-background-radius: 10;">
                <font>
                   <Font size="20.0" />
                </font>
             </TextField>
-            <Button layoutX="39.0" layoutY="109.0" mnemonicParsing="false" onAction="#onJoinClubClicked" prefHeight="44.0" prefWidth="143.0" style="-fx-background-color: #55CB68; -fx-background-radius: 15;" text="JOIN" textFill="WHITE">
+            <Button layoutX="39.0" layoutY="91.0" mnemonicParsing="false" onAction="#onJoinClubClicked" prefHeight="44.0" prefWidth="143.0" style="-fx-background-color: #55CB68; -fx-background-radius: 15;" text="JOIN" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Label fx:id="errorJoinClubsLabel" layoutX="29.0" layoutY="76.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
+            <Label fx:id="errorJoinClubsLabel" layoutX="29.0" layoutY="58.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="leaveClubsPane" layoutX="751.0" layoutY="415.0" opacity="0.0" prefHeight="167.0" prefWidth="229.0">
+      <AnchorPane fx:id="leaveClubsPane" layoutX="753.0" layoutY="482.0" opacity="0.0" prefHeight="167.0" prefWidth="229.0">
          <children>
             <Button layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#onLeaveClubClicked" prefHeight="44.0" prefWidth="143.0" style="-fx-background-color: #FB6F6F; -fx-background-radius: 15;" text="LEAVE" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <TextField fx:id="eventNameEventCreationInput1" layoutX="3.0" layoutY="28.0" prefHeight="44.0" prefWidth="221.0" promptText="    Enter the Club ID" style="-fx-background-radius: 10;">
+            <TextField fx:id="clubIDInputLeaveClubsStudetnsAndTeachers" layoutX="3.0" layoutY="28.0" prefHeight="44.0" prefWidth="221.0" promptText="    Enter the Club ID" style="-fx-background-radius: 10;">
                <font>
                   <Font size="20.0" />
                </font>
             </TextField>
-            <Label fx:id="errorJoinClubsLabel1" layoutX="32.0" layoutY="74.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
+            <Label fx:id="errorleaveClubsLabel1" layoutX="32.0" layoutY="74.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
                <font>
                   <Font size="15.0" />
                </font>
@@ -123,10 +124,20 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="refreshClubsViewButton" layoutX="30.0" layoutY="252.0" mnemonicParsing="false" onAction="#onRefreshClubsViewButtonClicked" prefHeight="393.0" prefWidth="682.0" style="-fx-background-color: white;" text="Refresh Clubs">
+      <Button fx:id="refreshClubsStudentsAndTeachersViewButton" layoutX="30.0" layoutY="252.0" mnemonicParsing="false" onAction="#onRefreshClubsViewStudentsAndTeachersButtonClicked" prefHeight="393.0" prefWidth="682.0" style="-fx-background-color: white;" text="Refresh Clubs">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Button>
+      <TextField fx:id="studentIdInputClubsScreen" layoutX="781.0" layoutY="227.0" prefHeight="44.0" prefWidth="174.0" promptText=" Enter your ID" style="-fx-background-radius: 10; -fx-border-radius: 11;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <Label fx:id="errorStudentIdInputClubsScreen" layoutX="786.0" layoutY="271.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
