--- a/src/main/resources/com/example/sacms/dashboardClubAdvisor.fxml
+++ b/src/main/resources/com/example/sacms/dashboardClubAdvisor.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -14,7 +16,7 @@
          </image>
       </ImageView>
       <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
-      <Button fx:id="clubScreenButtonDashboard" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
+      <Button fx:id="clubScreenButtonDashboard" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewClubAdvisorScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
          <font>
             <Font name="Noto Sans Regular" size="22.0" />
          </font>
@@ -24,7 +26,7 @@
             <Font name="Noto Sans Regular" size="22.0" />
          </font>
       </Button>
-      <Button fx:id="reportsScreenButtonDashboard" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" onAction="#onReportsScreenButtonClicked" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
+      <Button fx:id="reportsScreenButtonDashboard" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
          <font>
             <Font name="Noto Sans Regular" size="22.0" />
          </font>
@@ -174,7 +176,7 @@
          </children>
       </AnchorPane>
       <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
-      <Button fx:id="refreshButtonDashboard" layoutX="-4.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRefreshDashboardScreenButtonClicked" opacity="0.93" prefHeight="672.0" prefWidth="1040.0" style="-fx-background-color: white;" text="Refresh">
+      <Button fx:id="refreshButtonStudentsAndTeachersDashboard" layoutY="92.0" mnemonicParsing="false" onAction="#onRefreshDashboardScreenButtonClicked" opacity="0.95" prefHeight="582.0" prefWidth="1040.0" style="-fx-background-color: white;" text="Refresh">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
