Validation for date and time done, changed the prompt text for date in the above three fxml's

--- a/src/main/resources/com/example/sacms/signInTeacher.fxml
+++ b/src/main/resources/com/example/sacms/signInTeacher.fxml
@@ -46,7 +46,7 @@
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="dateSignInTeacherInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="320.0" promptText="DD/M/YYYY" style="-fx-background-radius: 10;">
+        <TextField fx:id="dateSignInTeacherInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="320.0" promptText="YYYY-MM-DD" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
