--- a/src/main/resources/com/example/sacms/clubsViewClubAdvisor.fxml
+++ b/src/main/resources/com/example/sacms/clubsViewClubAdvisor.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
         <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -14,7 +19,7 @@
             </image>
         </ImageView>
         <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
-        <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
+        <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewClubAdvisorScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
             <font>
                 <Font name="Noto Sans Bold" size="22.0" />
             </font>
@@ -52,22 +57,62 @@
             </children>
         </AnchorPane>
         <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
-        <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="286.0" text="List of Clubs">
-            <font>
-                <Font name="System Bold" size="42.0" />
-            </font>
-        </Label>
-        <Button layoutX="627.0" layoutY="142.0" mnemonicParsing="false" onAction="#onCreateClubButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000; -fx-background-radius: 15;" text="Create a Club" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="20.0" />
-            </font>
-        </Button>
-      <TableView layoutX="27.0" layoutY="227.0" prefHeight="422.0" prefWidth="994.0">
+      <Label layoutX="37.0" layoutY="143.0" prefHeight="62.0" prefWidth="286.0" text="List of Clubs">
+         <font>
+            <Font name="System Bold" size="42.0" />
+         </font>
+      </Label>
+      <Button layoutX="497.0" layoutY="150.0" mnemonicParsing="false" onAction="#onCreateClubButtonOneClicked" prefHeight="43.0" prefWidth="133.0" style="-fx-background-color: #000000; -fx-background-radius: 15;" text="CREATE" textFill="WHITE">
+         <font>
+            <Font name="Noto Sans Bold" size="20.0" />
+         </font>
+      </Button>
+      <Label layoutX="37.0" layoutY="192.0" prefHeight="31.0" prefWidth="398.0" text="Do you want to Create or Delete a club?">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button layoutX="638.0" layoutY="150.0" mnemonicParsing="false" onAction="#onDeleteClubsViewOptionClicked" prefHeight="44.0" prefWidth="141.0" style="-fx-background-color: #FB6F6F; -fx-background-radius: 15;" text="DELETE" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <TableView layoutX="37.0" layoutY="237.0" prefHeight="422.0" prefWidth="742.0">
          <columns>
-            <TableColumn prefWidth="248.79996871948242" text="Club Name" />
-            <TableColumn prefWidth="530.4000854492188" text="Club Description" />
-            <TableColumn prefWidth="216.0" text="Status" />
+            <TableColumn prefWidth="89.0" text="Club ID" />
+            <TableColumn prefWidth="177.0" text="Club Name" />
+            <TableColumn prefWidth="336.0" text="Club Description" />
+            <TableColumn prefWidth="139.0" text="Teacher In charge" />
          </columns>
       </TableView>
+      <Button fx:id="refreshClubsViewClubAdvisorButton" layoutX="50.0" layoutY="266.0" mnemonicParsing="false" onAction="#onRefreshClubsViewClubAdvisorButtonClicked" prefHeight="379.0" prefWidth="715.0" style="-fx-background-color: white;" text="Refresh Clubs">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Button>
+      <TextField fx:id="clubAdvisorIDInputClubsScreen" layoutX="828.0" layoutY="239.0" prefHeight="44.0" prefWidth="174.0" promptText=" Enter your ID" style="-fx-background-radius: 10; -fx-border-radius: 11;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <AnchorPane fx:id="deleteClubsPane" layoutX="801.0" layoutY="316.0" opacity="0.0" prefHeight="167.0" prefWidth="229.0">
+         <children>
+            <Button layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#onDeleteButtonClickedClubsScreen" prefHeight="44.0" prefWidth="143.0" style="-fx-background-color: #FB6F6F; -fx-background-radius: 15;" text="DELETE" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+            <TextField fx:id="clubIDDeleteInput" layoutX="3.0" layoutY="28.0" prefHeight="44.0" prefWidth="221.0" promptText="    Enter the Club ID" style="-fx-background-radius: 10;">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </TextField>
+            <Label fx:id="errorDeleteClubsLabel" layoutX="32.0" layoutY="74.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
