--- a/src/main/resources/com/example/sacms/editEventScreen.fxml
+++ b/src/main/resources/com/example/sacms/editEventScreen.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.shape.Rectangle?>
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -20,12 +20,12 @@
       <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
       <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewClubAdvisorScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
          <font>
-            <Font name="Noto Sans Bold" size="22.0" />
+            <Font name="Noto Sans " size="22.0" />
          </font>
       </Button>
       <Button fx:id="eventScreenButton" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
          <font>
-            <Font name="Noto Sans Regular" size="22.0" />
+            <Font name="Noto Sans Bold" size="22.0" />
          </font>
       </Button>
       <Button fx:id="reportsScreenButton" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" onAction="#onReportsScreenButtonClicked" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
@@ -56,93 +56,94 @@
          </children>
       </AnchorPane>
       <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
-      <Label layoutX="52.0" layoutY="179.0" text="Enter club name">
+      <Label layoutX="28.0" layoutY="110.0" prefHeight="62.0" prefWidth="376.0" text="Edit an Event">
+         <font>
+            <Font name="System Bold" size="42.0" />
+         </font>
+      </Label>
+      <Label layoutX="28.0" layoutY="196.0" text="Enter event name">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="clubNameInputClubCreationScreen" layoutX="52.0" layoutY="211.0" prefHeight="26.0" prefWidth="261.0" promptText="Name" style="-fx-background-radius: 10;">
+      <Label layoutX="377.0" layoutY="196.0" text="Enter event date">
+         <font>
+            <Font name="Noto Sans Regular" size="20.0" />
+         </font>
+      </Label>
+      <TextField fx:id="eventNameEditEventInput" layoutX="28.0" layoutY="228.0" prefHeight="43.0" prefWidth="320.0" promptText="Name" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="clubAdvisorIDInputClubCreationScreen" layoutX="397.0" layoutY="211.0" prefHeight="26.0" prefWidth="261.0" promptText="Club advisor ID" style="-fx-background-radius: 10;">
+      <TextField fx:id="eventDateEditEventInput" layoutX="377.0" layoutY="228.0" prefHeight="43.0" prefWidth="206.0" promptText="YYYY-MM-DD" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <Label layoutX="397.0" layoutY="179.0" text="Enter your ID">
+      <Label layoutX="28.0" layoutY="292.0" text="Enter event time">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="51.0" layoutY="291.0" text="Enter club description">
+      <TextField fx:id="eventTimeEditEventInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="249.0" promptText="HH:MM" style="-fx-background-radius: 10;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <Label layoutX="304.0" layoutY="292.0" text="Event ID">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <ImageView fitHeight="58.0" fitWidth="133.0" layoutX="24.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+      <TextField fx:id="eventIDEditEventInput" layoutX="304.0" layoutY="324.0" prefHeight="43.0" prefWidth="278.0" promptText="EventID" style="-fx-background-radius: 10;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <Label layoutX="28.0" layoutY="392.0" text="Enter event description">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="381.0" fitWidth="262.0" layoutX="673.0" layoutY="265.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/Logo.png" />
+            <Image url="@../images/EventEditScreenPic.png" />
          </image>
       </ImageView>
-      <Button fx:id="homeScreenButton" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
-      <Label layoutX="52.0" layoutY="93.0" text="Create a Club now">
-         <font>
-            <Font name="System Bold" size="44.0" />
-         </font>
-      </Label>
-      <Button layoutX="453.0" layoutY="585.0" mnemonicParsing="false" onAction="#onCreateClubButtonTwoClicked" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="CREATE" textFill="WHITE">
+      <Button layoutX="347.0" layoutY="556.0" mnemonicParsing="false" onAction="#onUpdateEventButtonClicked" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="UPDATE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <ImageView fitHeight="348.0" fitWidth="253.0" layoutX="715.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/ClubCreationScreenPic.png" />
-         </image>
-      </ImageView>
-      <TextArea fx:id="clubDescriptionInputClubCreationScreen" layoutX="52.0" layoutY="333.0" prefHeight="214.0" prefWidth="322.0" style="-fx-border-radius: 20;" />
-      <Label layoutX="63.0" layoutY="255.0" textFill="RED" />
-      <Label layoutX="404.0" layoutY="255.0" textFill="RED" />
-      <TextField fx:id="clubTeacherIDInputClubCreationScreen" layoutX="395.0" layoutY="331.0" prefHeight="44.0" prefWidth="202.0" promptText="Teacher ID" style="-fx-background-radius: 10;">
+      <TextArea fx:id="eventDescriptionEditEventInput" layoutX="28.0" layoutY="424.0" prefHeight="97.0" prefWidth="554.0" promptText="Explain about the event/meeting or activity">
          <font>
             <Font size="20.0" />
-         </font>
-      </TextField>
-      <Label layoutX="395.0" layoutY="292.0" text="Choose a Teacher Incharge">
-         <font>
-            <Font size="22.0" />
-         </font>
-      </Label>
-      <Label fx:id="errorClubNameInputClubCreationScreen" layoutX="52.0" layoutY="255.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+         </font></TextArea>
+      <Label fx:id="errorEventNameEventCreationInput" layoutX="28.0" layoutY="271.0" prefHeight="18.0" prefWidth="298.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorClubDescriptionInputClubCreationScreen" layoutX="52.0" layoutY="554.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+      <Label fx:id="errorEventDateEventCreationInput" layoutX="377.0" layoutY="271.0" prefHeight="20.0" prefWidth="206.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorClubAdvisorIDInputClubCreationScreen" layoutX="395.0" layoutY="262.0" prefHeight="20.0" prefWidth="266.0" textFill="#d30000">
+      <Label fx:id="errorEventTimeEventCreationInput" layoutX="28.0" layoutY="367.0" prefHeight="20.0" prefWidth="250.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorTeacherIDInputClubCreationScreen" layoutX="395.0" layoutY="376.0" prefHeight="20.0" prefWidth="193.0" textFill="#d30000">
+      <Label fx:id="errorClubIDEventCreationInput" layoutX="305.0" layoutY="367.0" prefHeight="20.0" prefWidth="278.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="604.0" layoutY="331.0" mnemonicParsing="false" onAction="#onLoadStaffIDClubScreationScreenClicked" prefHeight="44.0" prefWidth="56.0" style="-fx-background-color: black; -fx-background-radius: 10;" textFill="#dddddd">
-         <graphic>
-            <ImageView fitHeight="34.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/loadIcon.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
+      <Label fx:id="errorEventDescriptionEventCreationInput" layoutX="27.0" layoutY="522.0" prefHeight="20.0" prefWidth="458.0" textFill="#ff0900">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
