--- a/src/main/resources/com/example/sacms/eventsClubAdvisorView.fxml
+++ b/src/main/resources/com/example/sacms/eventsClubAdvisorView.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
        <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
            <image>
@@ -14,7 +19,7 @@
            </image>
        </ImageView>
        <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
-       <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
+       <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewClubAdvisorScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
            <font>
                <Font name="Noto Sans Regular" size="22.0" />
            </font>
@@ -54,25 +59,74 @@
        <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
       <Button fx:id="homeScreenButton" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
       <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" opacity="0.0" prefHeight="58.0" prefWidth="74.0" />
-      <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="286.0" text="List of events">
+      <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="286.0" text="List of Events">
          <font>
             <Font name="System Bold" size="42.0" />
          </font>
       </Label>
-      <Button layoutX="627.0" layoutY="142.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="Schedule an event" textFill="WHITE">
+      <Button layoutX="489.0" layoutY="140.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="43.0" prefWidth="272.0" style="-fx-background-color: #000000; -fx-background-radius: 15;" text="SCHEDULE" textFill="WHITE">
          <font>
             <Font name="Noto Sans Bold" size="20.0" />
          </font>
       </Button>
-      <TableView layoutX="27.0" layoutY="219.0" prefHeight="422.0" prefWidth="994.0">
-        <columns>
-          <TableColumn prefWidth="173.6000213623047" text="Event Name" />
-          <TableColumn prefWidth="164.79998779296875" text="Date" />
-            <TableColumn prefWidth="164.0" text="Time" />
-            <TableColumn prefWidth="168.79998779296875" text="Club" />
-            <TableColumn prefWidth="158.39996337890625" text="Location" />
-            <TableColumn prefWidth="174.39990234375" text="Status" />
-        </columns>
+      <Label layoutX="27.0" layoutY="189.0" prefHeight="31.0" prefWidth="398.0" text="Do you want to Schedule, Edit or Delete an event?">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TableView layoutX="27.0" layoutY="256.0" prefHeight="396.0" prefWidth="736.0">
+         <columns>
+            <TableColumn prefWidth="73.0" text="EventID" />
+            <TableColumn prefWidth="223.0" text="Event Name" />
+            <TableColumn prefWidth="107.0" text="Date" />
+            <TableColumn prefWidth="79.0" text="Time" />
+            <TableColumn prefWidth="85.0" text="Location" />
+            <TableColumn prefWidth="167.0" text="Club Name" />
+         </columns>
       </TableView>
+      <Button layoutX="489.0" layoutY="195.0" mnemonicParsing="false" onAction="#onEditEventsViewOptionClicked" prefHeight="44.0" prefWidth="126.0" style="-fx-background-color: #55CB68; -fx-background-radius: 15;" text="EDIT" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <Button layoutX="622.0" layoutY="195.0" mnemonicParsing="false" onAction="#onDeleteEventsViewOptionClicked" prefHeight="44.0" prefWidth="141.0" style="-fx-background-color: #FB6F6F; -fx-background-radius: 15;" text="DELETE" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <TextField fx:id="clubAdvisorIdInputEventsScreen" layoutX="811.0" layoutY="256.0" prefHeight="44.0" prefWidth="174.0" promptText=" Enter your ID" style="-fx-background-radius: 10; -fx-border-radius: 11;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <AnchorPane fx:id="deleteEventsPane" layoutX="784.0" layoutY="397.0" opacity="0.0" prefHeight="167.0" prefWidth="229.0">
+         <children>
+            <Button layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#onDeleteButtonClickedEventsScreen" prefHeight="44.0" prefWidth="143.0" style="-fx-background-color: #FB6F6F; -fx-background-radius: 15;" text="DELETE" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+            <TextField fx:id="eventIDDelete" layoutX="3.0" layoutY="28.0" prefHeight="44.0" prefWidth="221.0" promptText="    Enter the Event ID" style="-fx-background-radius: 10;">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </TextField>
+            <Label fx:id="errorEventIDDelete" layoutX="32.0" layoutY="74.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <Label fx:id="errorClubAdvisorIdInputEventsLabel" layoutX="817.0" layoutY="309.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Button fx:id="refreshEventsViewClubAdvisorButton" layoutX="50.0" layoutY="287.0" mnemonicParsing="false" onAction="#onRefreshEventsViewClubAdvisorButtonClicked" prefHeight="358.0" prefWidth="691.0" style="-fx-background-color: white;" text="Refresh Events">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
