--- a/src/main/resources/com/example/sacms/splashScreen.fxml
+++ b/src/main/resources/com/example/sacms/splashScreen.fxml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
-      <ImageView fitHeight="185.0" fitWidth="475.0" layoutX="339.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="185.0" fitWidth="475.0" layoutX="322.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/Logo.png" />
          </image></ImageView>
-      <Label layoutX="362.0" layoutY="368.0" prefHeight="45.0" prefWidth="394.0" text="School Activity Club Managment System">
+      <Label layoutX="344.0" layoutY="395.0" prefHeight="45.0" prefWidth="394.0" text="School Activity Club Managment System">
          <font>
             <Font name="Noto Sans Regular" size="20.0" />
          </font>
